--- a/article.html
+++ b/article.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/stylearticle.css">
     <title>Document</title>
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="https://tallon-ivi.github.io/Eindopdracht-test/">
+    <meta name="twitter:creator" content="Leon Bosma">
+    <meta name="twitter:title" content="LOOTBOXES: DE DUISTERE ZIJDE VAN GAMING?">
+    <meta name="twitter:article:url" content="https://tallon-ivi.github.io/Eindopdracht-test/article.html">
+    <meta name="twitter:category" content="Ethiek">
+    <meta name="twitter:image" content="https://tallon-ivi.github.io/Eindopdracht-test/img/thumbnailpicture.png">
 </head>
 <body>
 <header>
@@ -23,7 +31,7 @@
     <img class="csgocase" src="img/csgocase.jpg" alt="lootbox">
 
     <div class="titlebox">
-        <h3>DE DUISTERE ZIJDE VAN GAMING?</h3>
+        <h3>LOOTBOXES: DE DUISTERE ZIJDE VAN GAMING?</h3>
         <h4>Geschreven door:
             Leon Bosma - 2022
         </h4>
@@ -64,7 +72,10 @@
 
 
 
-<footer></footer>
+<footer>
+    <h5>copyright 2022 - The Design Papers all rights reserved</h5>
+
+</footer>
     
 </body>
 </html>
