--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
                 <li><a href="/ethiek/">ETHIEK</a></li>
               </ul>
         </div>
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="https://tallon-ivi.github.io/Eindopdracht-test/">
+    <meta name="twitter:creator" content="Leon Bosma">
+    <meta name="twitter:title" content="LOOTBOXES: DE DUISTERE ZIJDE VAN GAMING?">
+    <meta name="twitter:article:url" content="https://tallon-ivi.github.io/Eindopdracht-test/article.html">
+    <meta name="twitter:category" content="Ethiek">
+    <meta name="twitter:image" content="https://tallon-ivi.github.io/Eindopdracht-test/img/thumbnailpicture.png">
     </header>
 
     <div class="abboneren">
