--- a/article.html
+++ b/article.html
@@ -16,13 +16,21 @@
     <meta name="twitter:category" content="Ethiek">
     <meta name="twitter:image" content="https://tallon-ivi.github.io/Eindopdracht-test/img/thumbnailpicture.png">
 </head>
+
 <body>
 <header>
     <a href="index.html">
         <h1>THE DESIGN PAPERS</h1>
     </a>
 
-    <a href=""><img class= "menubutton" src="img/menu.png" alt="menubutton"></a>
+    <div class="hamburger-menu">
+        <div class="nav-btn"><img src="img/menu.png"></div>
+        <div class="nav-content">
+        <a class="nav-item" href="index.html">Home</a>
+        <a class="nav-item" href="index.html">Contact</a>
+        <a class="nav-item" href="index.html">About Us</a>
+        </div>
+    </div>
 
     <h2>Gaming articles & news</h2>
 
@@ -56,18 +64,32 @@
  </div>
 
  <div class="anekdote">
-    <h2>Videogames spelen een steeds grotere rol in de samenleving. Veel van deze games, al dan niet prestatiegericht, zijn gratis. De prestatiegerichte games maken vaak gebruik van lootboxes. De ‘beloning’ van lootboxes zijn skins. Deze skins zijn meestal heel weinig waard en het komt zelden voor dat ze dat wel zijn.  </h2>
+    <p>Videogames spelen een steeds grotere rol in de samenleving. Veel van deze games, al dan niet prestatiegericht, zijn gratis. De prestatiegerichte games maken vaak gebruik van lootboxes. De ‘beloning’ van lootboxes zijn skins. Deze skins zijn meestal heel weinig waard en het komt zelden voor dat ze dat wel zijn.  </p>
  </div>
 
- <div class="nutshell"></div>
+ <div class="nutshell">
+    <p>De kans dat je een dure skin eruit krijgt is natuurlijk nihil, is het dan niet een vorm van gokken? Dit is door vele landen nog niet bepaald, maar in Nederland en Belgie zijn ze wel verboden. Alleen is er een probleem met externe gokwebsites, hier kun je de verkregen skins verkopen om verder te gokken. Al de opgenoemde dingen zijn ook nog eens zeer toegankelijk voor mensen onder de 18, er zijn namelijk weinig restricties. Is dit allemaal wel moreel? Zijn lootboxes zelf beter dan andere opties?</p>
+ </div>
 
- <div class="morality"></div>
+ <div class="morality">
+    <h6>Zijn lootboxes moreel?</h6>
+    <p>Lootboxes zijn over heel de wereld verspreid en ze harken miljarden euro’s per jaar naar binnen. Ze zijn voor sommige games veruit de grootste factor voor winst. De ontwikkelaars krijgen heel veel geld binnen van mensen die een vorm van gokken uitoefenen, is dit wel moreel? Volgens onderzoek bij de ‘journal of clinical medicine’ zijn er vele verschillende redenen dat mensen lootboxes openen. Ze hebben 25 games tussen de 16 en 44 gevraagd wat hun motivaties waren voor het openen van lootboxes. Dit kan variëren van: “Het is leuk!” of “De exclusieve animaties en kleuren zijn heel mooi! Tot “Mijn vrienden hebben me onder druk gezet” of “Ik wil erbij horen”. Nederland en België zijn de enige twee landen op de wereld met een ban op lootboxes, zouden ander landen moeten volgen? Of is dat moreel onjuist voor de ontwikkelaars?</p>
+ </div>
 
- <div class="consequences"></div>
+ <div class="consequences">
+    <h6>Wat zijn de mogelijke gevolgen van lootboxes?</h6>
+    <p>Het spenderen stopt niet altijd bij de lootboxes. Nadat je de box hebt geopend heb je een skin die geld waard is. Deze skins kunnen soms verkocht worden, maar er zijn ook andere manieren om ze te gebruiken. Er zijn tientallen externe gokwebsites waar je skins van de grootste online games kunt verkopen om er vervolgens mee te gokken en nieuwe skins mee kan inkopen. Deze websites zijn wederom zeer toegankelijk, ook voor mensen onder de 18. Deze websites zijn niet verbannen in Nederland en België, waardoor mensen alsnog kunnen gokken met skins uit videogames. Deze websites hebben geen duidelijke indicatie van betrouwbaarheid.</p>
+ </div>
 
- <div class="positive-side"></div>
+ <div class="positive-side">
+    <h6>De positieve kanten van lootboxes</h6>
+    <p>Afgezien van het feit dat lootboxes gokken is, ben je wel bewust van wat je aan het doen bent. Er zijn natuurlijk andere manieren voor game ontwikkelaars om skins te distribueren, maar deze methodes kunnen illegaal zijn in bepaalde landen of andere problemen veroorzaken. Lootboxes zorgen voor een volledig gesimuleerde economie in videogames. Op deze manier kun je ook direct vanuit de gaming gemeenschap skins aanschaffen in plaats van ze krijgen via lootboxes. Voor sommige games is het ook een van de kenmerken die het spel zo populair maakt.</p>
+ </div>
 
- <div class="youth"></div>
+ <div class="youth">
+    <h6>Lootboxes onder de jeugd</h6>
+    <p>Alhoewel meeste online videogames een 18+ beoordeling hebben, zijn de beoordelingen nooit effectief genoeg geweest om minderjarigen weg te houden van videogames. Als deze minderjarigen toegang hebben tot geld kunnen ze heel makkelijk toegang hebben tot de lootboxes. Meestal hebben meeste minderjarigen geen behoefte aan gokken, maar als het gokken een masker heeft in de vorm van een leuke videogame is het veel verleidelijker. Externe gokwebsites zullen ook niet verdergaan dan een enkele waarschuwing dat je 18 moet zijn om te gokken.</p>
+ </div>
 </section>
 
 
