--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="nav-content">
             <a class="nav-item" href="index.html">Home</a>
             <a class="nav-item" href="index.html">Contact</a>
-            <a class="nav-item" href="index.html">About Us</a>
+            <a class="nav-item" href="index.html">Over ons</a>
             </div>
         </div>
 
@@ -49,26 +49,28 @@
 
     </header>
 
+    <div class="subscriber-section">
     <div class="abboneren">
         <h3>Meer lezen?</h3>
         <div class="abboneren-knop">
-            <h4>abboneren</h4>
+            <a href=""><h4>Abbonneren</h4></a>
         </div>
+    </div>
     </div>
 
     <div class="divider"></div>
 
     <section class="mainpage-section">
-        <div class="bluebox">
-            <h3>ARTIKEL VAN DE WEEK</h3>
+        <div class="bigbox">
+            <h3>Lootboxes: De duistere zijde van gaming?</h3>
 
-            <div class="pinkbox">
-                <h2>ETHIEK</h2>
+            <div class="smallbox">
+                <h2 class="ethiek">ETHIEK</h2>
             </div>
             <div class="textbox">
-                <h7>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec mi nec leo ullamcorper lacinia. Donec in venenatis metus. Nulla semper dapibus mi eget pharetra. Mauris erat tellus, blandit id feugiat tincidunt, accumsan sit amet ex. Vivamus vehicula cursus tellus, at lobortis lacus lobortis ac. Phasellus fringilla fringilla dolor.</h7>
+            <h7>Videogames spelen een steeds grotere rol in de samenleving. Veel van deze games, al dan niet prestatiegericht, zijn gratis. De prestatiegerichte games maken vaak gebruik van lootboxes. De ‘beloning’ van lootboxes zijn skins. Deze skins zijn meestal heel weinig waard en het komt zelden voor dat ze dat wel zijn.  </h7>
             </div>
-            <img class="gamer" src="img/mainpage-picture.jpg" alt="gamer">
+            <img class="lootbox" src="img/csgocase.jpg" alt="csgocase">
             <a class="read-more" href="article.html">Lees artikel...</a>
         </div>
 
@@ -81,48 +83,97 @@
         <h3>NIEUWS ARTIKELEN</h3>
         <div class="overwatch">
             <img class="overwatch-picture" src="img/ow2.jpg" alt="overwatch 2">
+            <h4>Overwatch 2 release grote flop?</h4>
+            <a class="read-more-small" href="">
+                <h5>Lees artikel...</h5>
+            </a>
         </div>
         <div>
             <div class="tf2">
                 <img class="tf2-picture" src="img/sfallbosses.0.0.jpg" alt="tf2-bosses">
+                <h4>Scream fortress: De beste tot nu toe?</h4>
+                <a class="read-more-small" href="">
+                    <h5>Lees artikel...</h5>
+                </a>
             </div>
-        </div>
-        <div>
-            <div class="eft">
-                <img class="eft-picture" src="img/escape-from-tarkov-maps.jpeg" alt="killa">
-            </div>
-        </div>
-        <div class="mario">
-            <img class="mario-picture" src="img/mario movie.jpg" alt="mario movie">
-        </div>
-        <div class="coc">
-            <img class="coc-picture" src="img/clash of clans.png" alt="town hall 15">
         </div>
 
-        <div class="overwatch">
-            <img class="overwatch-picture" src="img/ow2.jpg" alt="overwatch 2">
-        </div>
-        <div>
-            <div class="tf2">
-                <img class="tf2-picture" src="img/sfallbosses.0.0.jpg" alt="tf2-bosses">
-            </div>
-        </div>
         <div>
             <div class="eft">
                 <img class="eft-picture" src="img/escape-from-tarkov-maps.jpeg" alt="killa">
+                <h4>Escape from tarkov: Make or break?</h4>
+                <a class="read-more-small" href="">
+                    <h5>Lees artikel...</h5>
+                </a>
+            </div>
+        </div>
+
+        <div class="mario">
+            <img class="mario-picture" src="img/mario-movie.png" alt="mario movie">
+            <div class="text-box-mario">
+            <h4>Super Mario: geschikt voor een film?</h4>
+            <p>Er is recentelijk een splinternieuwe Super Mario film aangekondigd, echter zijn de fans bang dat het een grote flop kan worden...</p>
+            <a class="read-more-small" href="">
+                <h5>Lees artikel...</h5>
+            </a>
+        </div>
+        </div>
+
+        <div class="coc">
+            <img class="coc-picture" src="img/coc-picture.png" alt="town hall 15">
+            <div class="text-box-mario">
+                <h4>Stadhuis 15 in clash of clans!</h4>
+                <p>Het nieuwe stadhuis is mogelijk een van de coolste designs tot nu toe, is de content van de update alleen net zo goed?</p>
+                <a class="read-more-small" href="">
+                    <h5>Lees artikel...</h5>
+                </a>
+            </div>
+        </div>
+
+        <div class="re8">
+            <img class="re8-picture" src="img/Resident-Evil-Village-DLC.jpg" alt="Resident evil village DLC">
+            <h4>Nieuwe Resident Evil 8 DLC!</h4>
+            <a class="read-more-small" href="">
+                <h5>Lees artikel...</h5>
+            </a>
+        </div>
+
+        <div>
+            <div class="glitched-attraction">
+                <img class="glitched-attraction-picture" src="img/glitched-attraction.jpg" alt="animatronics">
+                <h4>FNAF escape rooms, geweldig idee?</h4>
+                <a class="read-more-small" href="">
+                    <h5>Lees artikel...</h5>
+                </a>
+            </div>
+        </div>
+
+        <div>
+            <div class="dbd">
+                <img class="dbd-picture" src="img/dbd.jpg" alt="dbd DLC">
+                <h4>Nieuwe DBD DLC!</h4>
+                <a class="read-more-small" href="">
+                    <h5>Lees artikel...</h5>
+                </a>
             </div>
 
             <div class="abboneren">
                 <h3>Meer lezen?</h3>
                 <div class="abboneren-knop">
-                    <h4>abboneren</h4>
+                    <h4>Abbonneren</h4>
                 </div>
             </div>
     </div>
 
     <footer>
-        <h5>copyright 2022 - The Design Papers all rights reserved</h5>
-        
+        <h5>Copyright 2022 - The Design Papers all rights reserved</h5>
+        <div class="footerline"></div>
+        <ul class="footer-nav">
+            <li><a href="/Over ons/">Over ons</a></li>
+            <li><a href="/Contact/">Contact</a></li>
+            <li><a href="/Abbonneren/">Abbonneren</a></li>
+            <li><a href="/Privacy/">Privacy</a></li>
+          </ul>
     </footer>  
 </body>
 </html>
